cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="navbar-left">
           <span>Elige tu sede:  </span>
           <select id="sedes" name="sedes">
-            <option>Lima</option>
-            <option>Mexico</option>
+            <option value="lima">Lima</option>
+            <option value="mexico">Mexico</option>
           </select>
         </div>
         <div class="navbar-right">
@@ -33,8 +33,8 @@
       </div>
     </section>
     <section id="areaDeJuego">
-      <div class="fotos">
-        <img src="fotos/mexico/Alma Patricia Jimenez.JPG" alt="">
+      <div id="fotos" class="fotos">
+        <!-- fotos --->
       </div>
       <div class="juego">
         <div class="tamañoInput">
@@ -44,6 +44,7 @@
         <button class="comprobar" type="button" name="button">COMPROBAR</button>
       </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="js/mexico.js" charset="utf-8"></script>
     <script src="js/peru.js" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8"></script>
