--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="navbar-left">
           <span>Elige tu sede:  </span>
           <select id="sedes" name="sedes">
+            <option>Selecciona sede</option>
             <option value="lima">Lima</option>
             <option value="mexico">Mexico</option>
           </select>
